--- a/about.html
+++ b/about.html
@@ -106,9 +106,9 @@
             <div class="col-lg-4 col-md-6 px-4">
               <h4 class="foot-head">Contacts</h4>
               <ul class="foot-links">
-                <li><a href="" class="foot-text"><i class="fas fa-home foot-icons"></i> N/A 210 Midhraun 80 Garðabær Iceland</a></li>
-                <li><a href="" class="foot-text"><i class="fa fa-envelope-o foot-icons"></i> support@Mold-Mining.com</a></li>
-                <li><a href="" class="foot-text"><i class="fas fa-phone foot-icons"></i> +66-456-456-6456</a></li>
+                <li><a href="" class="foot-text"><i class="fas fa-home foot-icons"></i> 920 Studemont St Houston Texas United States</a></li>
+                <li><a href="" class="foot-text"><i class="fa fa-envelope-o foot-icons"></i> support@mold-mining.com</a></li>
+                <li><a href="" class="foot-text"><i class="fas fa-phone foot-icons"></i> +13619777215</a></li>
               </ul>
             </div>
           </div>
@@ -116,7 +116,7 @@
           <hr>
           <div class="row">
             <div class="col-lg-6 col-md-6 col-xs-12">
-              <p class="foot-text text-center text-lg-start text-md-start">Copyright &copy; 2022 Cryptomultiminer. All Rights Reserved</p>
+              <p class="foot-text text-center text-lg-start text-md-start">Copyright &copy; 2022 Mold-Mining. All Rights Reserved</p>
             </div>
             <div class="col-lg-6 col-md-6 col-xs-12">
               <div class="social-links text-center text-lg-end text-md-end">
