--- a/about.html
+++ b/about.html
@@ -69,6 +69,10 @@
         <p class="text-center site-text">They came up with the idea of mining as a service and built the first mining farm in Eastern Europe. Since our founding, we have grown tremendously and a lot has happened, but one thing remains constant: We are all strong believers in the future of digital currencies and we love being part of this growing community.</p>
         </div>
         <br>
+        <div class="text-cover p-4">
+        <p class="text-center site-text">Our company "Mold-Mining Company has taken the mechanism to build this great company (MMC) with a high rated hash-rate to bring a solution for it's participant in the global world for benefits in cryptocurrency mining, And hold the right to only distribute daily profit as guaranteed to all our users worldwide.</p>
+        </div>
+        <br>
     </section>
 
     <section class="mission-vision">
@@ -108,7 +112,7 @@
               <ul class="foot-links">
                 <li><a href="" class="foot-text"><i class="fas fa-home foot-icons"></i> 920 Studemont St Houston Texas United States</a></li>
                 <li><a href="" class="foot-text"><i class="fa fa-envelope-o foot-icons"></i> support@mold-mining.com</a></li>
-                <li><a href="" class="foot-text"><i class="fas fa-phone foot-icons"></i> +13619777215</a></li>
+                <li><a href="" class="foot-text"><i class="fas fa-phone foot-icons"></i> +13463556088</a></li>
               </ul>
             </div>
           </div>
