added packages page

--- a/about.html
+++ b/about.html
@@ -34,6 +34,9 @@
               <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="packages.html">Investment Packages</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="customer-service.html">Customer Service</a>
             </li>
             <li class="nav-item">
@@ -102,6 +105,7 @@
               <ul class="foot-links">
                 <li><a href="index.html" class="foot-text">Home</a></li>
                 <li><a href="about.html" class="foot-text">About Us</a></li>
+                <li><a href="packages.html" class="foot-text">Investment Packages</a></li>
                 <li><a href="customer-service.html" class="foot-text">Customer Service</a></li>
                 <li><a href="contact.html" class="foot-text">Contact Us</a></li>
                 <li><a href="privacy.html" class="foot-text">Privacy</a></li>
