--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
               <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="packages.html">Investment Packages</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="customer-service.html">Customer Service</a>
             </li>
             <li class="nav-item">
@@ -77,13 +80,15 @@
                       <option value="premium">Premium</option>
                       <option value="gold">Gold</option>
                       <option value="platinum">Platinum</option>
+                      <option value="master">Master</option>
+                      <option value="master pro">Master Pro</option>
                     </select>
                   </div>
 
                   <br>
                   <div class="form-group">
                     <label for="daily" class="form-label home-ban-label">Daily Return (%)</label>
-                    <input type="text" name="daily" id="daily" class="form-control" value="2" readonly>
+                    <input type="text" name="daily" id="daily" class="form-control" value="1.5" readonly>
                   </div>
 
                   <br>
@@ -152,7 +157,27 @@
                 <span>Basic</span>
               </div>
               <div class="plans-amount py-4">
-               <h3 class="text-white">$20 - $100</h3>
+               <h3 class="text-white">$50</h3>
+              </div>
+              <div class="plans-info p-3">
+                <p>Daily Return</p>
+                <p>1.5%</p>
+                <p>Duration</p>
+                <p class="last-child">1 year</p>
+              </div>
+              <div class="plans-btn-area pt-4">
+                 <a href="#" class="btn btn-start-mine text-uppercase">Start Mining</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-xs-12 pt-5">
+            <div class="plans-area" align="center" data-aos="fade-in" data-aos-duration="1500">
+              <div class="plan-title pt-0">
+                <span>Amateur</span>
+              </div>
+              <div class="plans-amount py-4">
+               <h3 class="text-white">$100</h3>
               </div>
               <div class="plans-info p-3">
                 <p>Daily Return</p>
@@ -169,10 +194,30 @@
           <div class="col-lg-4 col-md-6 col-xs-12 pt-5">
             <div class="plans-area" align="center" data-aos="fade-in" data-aos-duration="1500">
               <div class="plan-title pt-0">
-                <span>Amateur</span>
+                <span>Senior</span>
               </div>
               <div class="plans-amount py-4">
-               <h3 class="text-white">$150 - $400</h3>
+               <h3 class="text-white">$200</h3>
+              </div>
+              <div class="plans-info p-3">
+                <p>Daily Return</p>
+                <p>2.5%</p>
+                <p>Duration</p>
+                <p class="last-child">1 year</p>
+              </div>
+              <div class="plans-btn-area pt-4">
+                 <a href="#" class="btn btn-start-mine text-uppercase">Start Mining</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-xs-12 pt-5">
+            <div class="plans-area" align="center" data-aos="fade-in" data-aos-duration="1500">
+              <div class="plan-title pt-0">
+                <span>Ethusiast</span>
+              </div>
+              <div class="plans-amount py-4">
+               <h3 class="text-white">$500</h3>
               </div>
               <div class="plans-info p-3">
                 <p>Daily Return</p>
@@ -189,10 +234,30 @@
           <div class="col-lg-4 col-md-6 col-xs-12 pt-5">
             <div class="plans-area" align="center" data-aos="fade-in" data-aos-duration="1500">
               <div class="plan-title pt-0">
-                <span>Senior</span>
+                <span>Professional</span>
               </div>
               <div class="plans-amount py-4">
-               <h3 class="text-white">$450 - $900</h3>
+               <h3 class="text-white">$1,000</h3>
+              </div>
+              <div class="plans-info p-3">
+                <p>Daily Return</p>
+                <p>3.5%</p>
+                <p>Duration</p>
+                <p class="last-child">1 year</p>
+              </div>
+              <div class="plans-btn-area pt-4">
+                 <a href="#" class="btn btn-start-mine text-uppercase">Start Mining</a>
+              </div>
+            </div>
+          </div>   
+          
+          <div class="col-lg-4 col-md-6 col-xs-12 pt-5">
+            <div class="plans-area" align="center" data-aos="fade-in" data-aos-duration="1500">
+              <div class="plan-title pt-0">
+                <span>Premium</span>
+              </div>
+              <div class="plans-amount py-4">
+               <h3 class="text-white">$3,000</h3>
               </div>
               <div class="plans-info p-3">
                 <p>Daily Return</p>
@@ -209,10 +274,30 @@
           <div class="col-lg-4 col-md-6 col-xs-12 pt-5">
             <div class="plans-area" align="center" data-aos="fade-in" data-aos-duration="1500">
               <div class="plan-title pt-0">
-                <span>Ethusiast</span>
+                <span>Gold</span>
               </div>
               <div class="plans-amount py-4">
-               <h3 class="text-white">$1,000 - $5,000</h3>
+               <h3 class="text-white">$5,000</h3>
+              </div>
+              <div class="plans-info p-3">
+                <p>Daily Return</p>
+                <p>4.5%</p>
+                <p>Duration</p>
+                <p class="last-child">1 year</p>
+              </div>
+              <div class="plans-btn-area pt-4">
+                 <a href="#" class="btn btn-start-mine text-uppercase">Start Mining</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-xs-12 pt-5">
+            <div class="plans-area" align="center" data-aos="fade-in" data-aos-duration="1500">
+              <div class="plan-title pt-0">
+                <span>Platinum</span>
+              </div>
+              <div class="plans-amount py-4">
+               <h3 class="text-white">$10,000</h3>
               </div>
               <div class="plans-info p-3">
                 <p>Daily Return</p>
@@ -229,74 +314,34 @@
           <div class="col-lg-4 col-md-6 col-xs-12 pt-5">
             <div class="plans-area" align="center" data-aos="fade-in" data-aos-duration="1500">
               <div class="plan-title pt-0">
-                <span>Professional</span>
+                <span>Master</span>
               </div>
               <div class="plans-amount py-4">
-               <h3 class="text-white">$3,500 - $6,000</h3>
+               <h3 class="text-white">$20,000</h3>
+              </div>
+              <div class="plans-info p-3">
+                <p>Daily Return</p>
+                <p>5.5%</p>
+                <p>Duration</p>
+                <p class="last-child">1 year</p>
+              </div>
+              <div class="plans-btn-area pt-4">
+                 <a href="#" class="btn btn-start-mine text-uppercase">Start Mining</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-xs-12 pt-5">
+            <div class="plans-area" align="center" data-aos="fade-in" data-aos-duration="1500">
+              <div class="plan-title pt-0">
+                <span>Master Pro</span>
+              </div>
+              <div class="plans-amount py-4">
+               <h3 class="text-white">$50,000</h3>
               </div>
               <div class="plans-info p-3">
                 <p>Daily Return</p>
                 <p>6%</p>
-                <p>Duration</p>
-                <p class="last-child">1 year</p>
-              </div>
-              <div class="plans-btn-area pt-4">
-                 <a href="#" class="btn btn-start-mine text-uppercase">Start Mining</a>
-              </div>
-            </div>
-          </div>   
-          
-          <div class="col-lg-4 col-md-6 col-xs-12 pt-5">
-            <div class="plans-area" align="center" data-aos="fade-in" data-aos-duration="1500">
-              <div class="plan-title pt-0">
-                <span>Premium</span>
-              </div>
-              <div class="plans-amount py-4">
-               <h3 class="text-white">$6,500 - $10,000</h3>
-              </div>
-              <div class="plans-info p-3">
-                <p>Daily Return</p>
-                <p>7%</p>
-                <p>Duration</p>
-                <p class="last-child">1 year</p>
-              </div>
-              <div class="plans-btn-area pt-4">
-                 <a href="#" class="btn btn-start-mine text-uppercase">Start Mining</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 col-xs-12 pt-5">
-            <div class="plans-area" align="center" data-aos="fade-in" data-aos-duration="1500">
-              <div class="plan-title pt-0">
-                <span>Gold</span>
-              </div>
-              <div class="plans-amount py-4">
-               <h3 class="text-white">$11,000 - $20,000</h3>
-              </div>
-              <div class="plans-info p-3">
-                <p>Daily Return</p>
-                <p>8%</p>
-                <p>Duration</p>
-                <p class="last-child">1 year</p>
-              </div>
-              <div class="plans-btn-area pt-4">
-                 <a href="#" class="btn btn-start-mine text-uppercase">Start Mining</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 col-xs-12 pt-5">
-            <div class="plans-area" align="center" data-aos="fade-in" data-aos-duration="1500">
-              <div class="plan-title pt-0">
-                <span>Platinum</span>
-              </div>
-              <div class="plans-amount py-4">
-               <h3 class="text-white">$30,000 - $100,000</h3>
-              </div>
-              <div class="plans-info p-3">
-                <p>Daily Return</p>
-                <p>9%</p>
                 <p>Duration</p>
                 <p class="last-child">1 year</p>
               </div>
@@ -537,6 +582,7 @@
               <ul class="foot-links">
                 <li><a href="index.html" class="foot-text">Home</a></li>
                 <li><a href="about.html" class="foot-text">About Us</a></li>
+                <li><a href="packages.html" class="foot-text">Investment Packages</a></li>
                 <li><a href="customer-service.html" class="foot-text">Customer Service</a></li>
                 <li><a href="contact.html" class="foot-text">Contact Us</a></li>
                 <li><a href="privacy.html" class="foot-text">Privacy</a></li>
